[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/eddie.jpg" type="Texture" id=1]
[ext_resource path="res://Actors/Memory/Memory.gd" type="Script" id=2]
[ext_resource path="res://Actors/Memory/PlayerCaptureArea.gd" type="Script" id=3]
[ext_resource path="res://Resources/PlayerEvents.tres" type="Resource" id=4]
[ext_resource path="res://Resources/Memories/LittleShit.tres" type="Resource" id=5]
[ext_resource path="res://Resources/UiState.tres" type="Resource" id=6]

[sub_resource type="PlaneMesh" id=4]
size = Vector2( 4, 2.25 )

[sub_resource type="Shader" id=5]
resource_local_to_scene = true
code = "shader_type spatial;
render_mode unshaded;

uniform sampler2D image;
uniform sampler2D noise;

uniform float fill_progress: hint_range(0.0, 1.0);
uniform float alpha: hint_range(0.0, 1.0);

void fragment() {
	float noise_intensity = texture(noise, UV + vec2(TIME * 0.08, TIME * 0.13)).x;
	float noise_intensity2 = texture(noise, UV + vec2(TIME * 0.001, TIME * 0.02)).x;
	
	vec2 image_wavy_offset = vec2(noise_intensity2 * 0.07, noise_intensity2 * 0.09);
	
	vec3 img_col = texture(image, vec2(SCREEN_UV.x, 1.0 - SCREEN_UV.y) + image_wavy_offset).rgb;
	float radial_brightness = 0.5 - distance(UV, vec2(0.5, 0.5));
	float brightness = radial_brightness - (noise_intensity * 0.2) + fill_progress;
	
	ALBEDO = img_col;
	ALPHA = smoothstep(1.0 - alpha, 1.0 - alpha +0.01, noise_intensity) * brightness * 2.0;
}"

[sub_resource type="OpenSimplexNoise" id=7]

[sub_resource type="NoiseTexture" id=8]
seamless = true
noise = SubResource( 7 )

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/fill_progress = 0.0
shader_param/alpha = 1.0
shader_param/image = ExtResource( 1 )
shader_param/noise = SubResource( 8 )

[sub_resource type="CylinderShape" id=10]
radius = 0.535159

[node name="Memory" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7.15255 )
script = ExtResource( 2 )
memory_data = ExtResource( 5 )
player_events = ExtResource( 4 )
ui_state = ExtResource( 6 )

[node name="TweenMemoryActivation" type="Tween" parent="."]

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.79715, 0 )
light_color = Color( 0.552941, 0.592157, 1, 1 )

[node name="ScreenPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.032, 0 )

[node name="MemoryScreen" type="MeshInstance" parent="ScreenPivot"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("../../..")
material/0 = SubResource( 6 )

[node name="PlayerCaptureArea" type="Area" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="PlayerCaptureArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="FrameTimer" type="Timer" parent="."]

[connection signal="tween_completed" from="TweenMemoryActivation" to="." method="_on_TweenMemoryActivation_tween_completed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
